<resources>
    <string name="app_name">BankApp</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_messaging">Messaging</string>
    <string name="title_gps">GPS</string>

    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_login">This login is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_section1">Add/Edit/Delete</string>
    <string name="title_section2">Messaging</string>
    <string name="title_section3">GPS</string>
    <string name="untitled"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="add_user">Add User</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>

    <string name="create_user">Create User</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="token">Token</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ssn">SSN</string>
    <string name="id">ID</string>

    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="type">Type</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="old_email">Old Email</string>
    <string name="new_email">New Email</string>
    <string name="logout">Logout</string>

</resources>
